// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Search Engine File Indexing and Search should recursively tokenize a directory 1`] = `
[
  "src/test_data/calendar/1.",
  "src/test_data/calendar/1.",
]
`;

exports[`Text Search Engine File Indexing and Search should recursively tokenize a directory 2`] = `
[
  "src/test_data/calendar/1.",
]
`;

exports[`Text Search Engine File Indexing and Search should tokenize a directory 1`] = `
[
  "src/test_data/lorem-ipsum-2.txt",
  "src/test_data/lorem-ipsum.txt",
  "src/test_data/lorem-ipsum.txt",
  "src/test_data/lorem-ipsum.txt",
  "src/test_data/lorem-ipsum.txt",
  "src/test_data/lorem-ipsum.txt",
]
`;

exports[`Text Search Engine File Indexing and Search should tokenize a directory 2`] = `
[
  "src/test_data/lorem-ipsum.txt",
]
`;

exports[`Text Search Engine File Indexing and Search should use case-insensitive search 1`] = `
[
  "src/test_data/calendar/1.",
  "src/test_data/calendar/1.",
]
`;

exports[`Text Search Engine File Indexing and Search should use case-insensitive search 2`] = `
[
  "src/test_data/calendar/1.",
]
`;

exports[`Text Search Engine Prefix Search (Search-as-You-Type) should return files and words containing a prefix 1`] = `
[
  {
    "file": "src/test_data/calendar/1.",
    "matchedWord": "president",
    "position": undefined,
  },
  {
    "file": "src/test_data/calendar/2.",
    "matchedWord": "president",
    "position": undefined,
  },
  {
    "file": "src/test_data/calendar/2.",
    "matchedWord": "presentation",
    "position": undefined,
  },
]
`;
